[lworld] Incorrect debug information for fields of scalarized flat array

XMLWordPrintable

      Running with -DWarmup=50000:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:\workspace\open\src\hotspot\share\oops/compressedOops.inline.hpp:51), pid=27808, tid=31608
      # assert(is_object_aligned(result)) failed: address not aligned: 0x00000000000000b3

      Stack: [0x000000e3cdb00000,0x000000e3cdc00000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0xacce81] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
      V [jvm.dll+0xd0acf7] VMError::report+0xf97 (vmError.cpp:732)
      V [jvm.dll+0xd0c5ae] VMError::report_and_die+0x7de (vmError.cpp:1548)
      V [jvm.dll+0xd0cc64] VMError::report_and_die+0x64 (vmError.cpp:1341)
      V [jvm.dll+0x4641a7] report_vm_error+0x117 (debug.cpp:264)
      V [jvm.dll+0xbc77b3] StackValue::create_stack_value+0x2c3 (stackValue.cpp:107)
      V [jvm.dll+0x47c2bd] reassign_fields_by_klass+0x6cd (deoptimization.cpp:1296)
      V [jvm.dll+0x47ccc5] Deoptimization::reassign_flat_array_elements+0x295 (deoptimization.cpp:1402)
      V [jvm.dll+0x47babf] Deoptimization::reassign_fields+0x35f (deoptimization.cpp:1430)
      V [jvm.dll+0x477242] eliminate_allocations+0x722 (deoptimization.cpp:221)
      V [jvm.dll+0x477f8c] Deoptimization::fetch_unroll_info_helper+0x56c (deoptimization.cpp:338)
      C 0x0000022d1074426b

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      v ~UncommonTrapBlob
      J 624 c2 compiler.valhalla.inlinetypes.TestArrays.test94([Qcompiler/valhalla/inlinetypes/MyValue2;IZ)J (104 bytes) @ 0x0000022d1827a2f0 [0x0000022d1827a1e0+0x0000000000000110]
      j compiler.valhalla.inlinetypes.TestArrays.test94_verifier(Z)V+57
      j jdk.internal.reflect.GeneratedMethodAccessor104.invoke(Ljava/lang/Object;[Ljava/lang/Object;)Ljava/lang/Object;+63
      J 235% c2 compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/Class;)V (1016 bytes) @ 0x0000022d181fe6e8 [0x0000022d181fe4c0+0x0000000000000228]
      j compiler.valhalla.inlinetypes.InlineTypeTest.run([Ljava/lang/String;[Ljava/lang/Class;)V+43
      j compiler.valhalla.inlinetypes.TestArrays.main([Ljava/lang/String;)V+29
      v ~StubRoutines::call_stub

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: