8253006: [lworld] Incorrect debug information for fields of scalarized flat array